Fixed bug #35248 (sqlite_query() doesnt set error_msg when return value is being used).